crates/tych/src/tests/snapshots/let_basic.snap
---
source: crates/tych/src/tests.rs
assertion_line: 542
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let x: int = 3\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn: Int32
                          init:
                            kind:
                              Lit:
                                value:
                                  Int32: 3
                                ty: Int32
                  ty: Void

