crates/tych/src/tests/snapshots/let_basic_no_init.snap
---
source: crates/tych/src/tests.rs
assertion_line: 543
expression: "(test[1], res)"
---
- "\n        fn foo() {\n            let x: int\n        }\n        "
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn: Int32
                          init: ~
                  ty: Void

