crates/tych/src/tests/snapshots/scope_basic_shadowing.snap
---
source: crates/tych/src/tests.rs
assertion_line: 732
expression: "(test[1], res)"
---
- "\nfn foo(a: int) -> int {\n    let b: int = 1\n    {\n        let b: bool = false\n    }\n    b\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              args:
                - - a
                  - Int32
              ret_ty: Int32
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: b
                          antn: Int32
                          init:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                    - kind:
                        Block:
                          list:
                            - kind:
                                Let:
                                  name: b
                                  antn: Bool
                                  init:
                                    kind:
                                      Lit:
                                        value:
                                          Bool: false
                                        ty: Bool
                          ty: Void
                    - kind:
                        Ident:
                          name: b
                          ty: Int32
                  ty: Int32

