crates/tych/src/tests/snapshots/scope_for_scope.snap
---
source: crates/tych/src/tests.rs
assertion_line: 760
expression: "(test[1], res)"
---
- "\nlet x: float = 1.0\nfor x: int = 1; x < 10; 1 {\n    x\n}\nx\n"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn: Float
            init:
              kind:
                Lit:
                  value:
                    Float: 1.0
                  ty: Float
      - kind:
          For:
            start_name: x
            start_antn: Int32
            start_expr:
              kind:
                Lit:
                  value:
                    Int32: 1
                  ty: Int32
            cond_expr:
              kind:
                BinOp:
                  op: Lt
                  lhs:
                    kind:
                      Ident:
                        name: x
                        ty: Int32
                  rhs:
                    kind:
                      Lit:
                        value:
                          Int32: 10
                        ty: Int32
                  ty: Bool
            step_expr:
              kind:
                Lit:
                  value:
                    Int32: 1
                  ty: Int32
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: x
                          ty: Int32
                  ty: Int32
      - kind:
          Ident:
            name: x
            ty: Float

