crates/tych/src/tests/snapshots/scope_nested_shadowing.snap
---
source: crates/tych/src/tests.rs
assertion_line: 754
expression: "(test[1], res)"
---
- "\nfn foo(a: int) -> int {\n    let b: int = 1\n    {\n        let b: bool = false\n        let a: float = {\n            let b: float = 1.0\n            b\n        }\n    }\n    b\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              args:
                - - a
                  - Int32
              ret_ty: Int32
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: b
                          antn: Int32
                          init:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                    - kind:
                        Block:
                          list:
                            - kind:
                                Let:
                                  name: b
                                  antn: Bool
                                  init:
                                    kind:
                                      Lit:
                                        value:
                                          Bool: false
                                        ty: Bool
                            - kind:
                                Let:
                                  name: a
                                  antn: Float
                                  init:
                                    kind:
                                      Block:
                                        list:
                                          - kind:
                                              Let:
                                                name: b
                                                antn: Float
                                                init:
                                                  kind:
                                                    Lit:
                                                      value:
                                                        Float: 1.0
                                                      ty: Float
                                          - kind:
                                              Ident:
                                                name: b
                                                ty: Float
                                        ty: Float
                          ty: Void
                    - kind:
                        Ident:
                          name: b
                          ty: Int32
                  ty: Int32

