crates/tych/src/tests/snapshots/struct_field_selector.snap
---
source: crates/tych/src/tests.rs
assertion_line: 941
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: int\n}\nstruct Bar {\n    let b: Foo\n}\nfn main() {\n    let x: Foo\n    let y: Bar\n    x.a\n    y.b\n}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: "main::Foo"
            fields:
              - kind:
                  Let:
                    name: a
                    antn: Int32
                    init: ~
            methods: []
      - kind:
          Struct:
            name: "main::Bar"
            fields:
              - kind:
                  Let:
                    name: b
                    antn:
                      Ptr:
                        Comp: "main::Foo"
                    init: ~
            methods: []
      - kind:
          Fn:
            proto:
              name: main
              params: []
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn:
                            Comp: "main::Foo"
                          init: ~
                    - kind:
                        Let:
                          name: y
                          antn:
                            Comp: "main::Bar"
                          init: ~
                    - kind:
                        FSelector:
                          comp:
                            kind:
                              Ident:
                                name: x
                                ty:
                                  Comp: "main::Foo"
                          field: a
                          ty: Int32
                    - kind:
                        FSelector:
                          comp:
                            kind:
                              Ident:
                                name: y
                                ty:
                                  Comp: "main::Bar"
                          field: b
                          ty:
                            Ptr:
                              Comp: "main::Foo"
                  ty:
                    Ptr:
                      Comp: "main::Foo"

