crates/tych/src/tests/snapshots/struct_field_selector_bad1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 919
expression: "(test[1], res)"
---
- "\nstruct Foo {}\nfn main() {\n    let x: Foo\n    x.a\n}\n"
- Err: "composite `main::Foo` has no field: `a`"

